--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,8 +13,9 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 chrono = { workspace = true }
 dotenv = "0.15"
-diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
+diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2", "serde_json"] }
 diesel_migrations = "2.1"
 r2d2 = "0.8"
 r2d2-diesel = "1.0"
-uuid = { workspace = true } 
+uuid = { workspace = true }
+bcrypt = "0.15" 
