--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -22,4 +22,6 @@ js-sys = { workspace = true }
 log = { workspace = true }
 thiserror = { workspace = true }
 chrono = { workspace = true }
-gloo-timers = { workspace = true } 
+gloo-timers = { workspace = true }
+pulldown-cmark = "0.10"
+uuid = { version = "1.0", features = ["v4", "js"] } 
