--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,4 +18,6 @@ diesel_migrations = "2.1"
 r2d2 = "0.8"
 r2d2-diesel = "1.0"
 uuid = { workspace = true }
-bcrypt = "0.15" 
+bcrypt = "0.15"
+regex = "1.0"
+once_cell = "1.19" 
