--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -20,4 +20,5 @@ r2d2-diesel = "1.0"
 uuid = { workspace = true }
 bcrypt = "0.15"
 regex = "1.0"
-once_cell = "1.19" 
+once_cell = "1.19"
+sysinfo = "0.29" 
