--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,4 +21,6 @@ uuid = { workspace = true }
 bcrypt = "0.15"
 regex = "1.0"
 once_cell = "1.19"
-sysinfo = "0.29" 
+sysinfo = "0.29"
+hex = "0.4"
+sha2 = "0.10" 
